// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LeftPaneComponent /> renders and matches the snapshot matches snapshot when hasFolders = false 1`] = `
<div>
  <div>
    <Connect(ButtonBarComponent)
      openAddFeedModal={[Function]}
      openEditFolderModal={[Function]}
    />
    <Connect(AddFeedModalComponent)
      isModalOpen={false}
      onCloseModal={[Function]}
    />
    <Connect(EditFolderModalComponent)
      folder={null}
      isModalOpen={false}
      onCloseModal={[Function]}
    />
    <Connect(EditFeedModalComponent)
      feed={null}
      isModalOpen={false}
      onCloseModal={[Function]}
    />
  </div>
  <div
    className="rss-leftmenu-folders-box"
  >
    <div
      key="all"
    >
      <Connect(FolderItemComponent)
        editFeed={[Function]}
        editFolder={[Function]}
        folder={
          Object {
            "_id": "all",
            "name": "All",
            "order": -1,
          }
        }
      />
    </div>
  </div>
  <div
    className="rss-leftmenu-logo"
  >
    <Icon
      as="i"
      name="rss"
    />
     RSSenal
  </div>
</div>
`;

exports[`<LeftPaneComponent /> renders and matches the snapshot matches snapshot when hasFolders = true 1`] = `
<div>
  <div>
    <Connect(ButtonBarComponent)
      openAddFeedModal={[Function]}
      openEditFolderModal={[Function]}
    />
    <Connect(AddFeedModalComponent)
      isModalOpen={false}
      onCloseModal={[Function]}
    />
    <Connect(EditFolderModalComponent)
      folder={null}
      isModalOpen={false}
      onCloseModal={[Function]}
    />
    <Connect(EditFeedModalComponent)
      feed={null}
      isModalOpen={false}
      onCloseModal={[Function]}
    />
  </div>
  <div
    className="rss-leftmenu-folders-box"
  >
    <div
      key="all"
    >
      <Connect(FolderItemComponent)
        editFeed={[Function]}
        editFolder={[Function]}
        folder={
          Object {
            "_id": "all",
            "name": "All",
            "order": -1,
          }
        }
      />
    </div>
    <div
      key="5b33c4bab2438d5708dc1967"
    >
      <Connect(FolderItemComponent)
        editFeed={[Function]}
        editFolder={[Function]}
        folder={
          Object {
            "__v": 0,
            "_id": "5b33c4bab2438d5708dc1967",
            "name": "Random",
            "order": 0,
          }
        }
      />
    </div>
    <div
      key="5b33c57eb2438d5708dc1968"
    >
      <Connect(FolderItemComponent)
        editFeed={[Function]}
        editFolder={[Function]}
        folder={
          Object {
            "__v": 0,
            "_id": "5b33c57eb2438d5708dc1968",
            "name": "Programming",
            "order": 1,
          }
        }
      />
    </div>
  </div>
  <div
    className="rss-leftmenu-logo"
  >
    <Icon
      as="i"
      name="rss"
    />
     RSSenal
  </div>
</div>
`;
